<resources>

    <string name="app_name">Target</string>

    <!-- Image Description -->
    <string name="cont_desc">image resource</string>

    <!-- Splash Screen -->
    <string name="powered">powered by mwinzi</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="login2">start shopping</string>
    <string name="login3">forgot password?</string>
    <string name="login4">don\'t have an account?</string>
    <string name="login5">sign up</string>

    <!-- Sign Up -->
    <string name="sign">Sign Up</string>
    <string name="sign2">create account</string>
    <string name="hint1">first name</string>
    <string name="hint2">second name</string>
    <string name="hint3">Choose Gender</string>
    <string name="hint4">Male</string>
    <string name="hint5">Female</string>
    <string name="hint6">Date Of Birth</string>
    <string name="hint7">email address</string>
    <string name="pass">enter password for your shopping account</string>
    <string name="hint8">password</string>
    <string name="hint9">phone number</string>
    <string name="done">account created successfully</string>
    <string name="btn_one">Next</string>
    <string name="btn_two">Go To Shop</string>

    <!-- Forgot Password -->
    <string name="forget">Forgot Your Password?</string>
    <string name="forget2">Don\'t fret. Let\'s take it from here. Enter your phone number below to set a new password</string>
    <string name="forget3">New Credentials</string>
    <string name="forget4">Just one more thing and you are back like you never left</string>
    <string name="forget5">new password</string>
    <string name="forget6">confirm password</string>
    <string name="forget7">password reset successfully. happy shopping</string>
    <string name="Next">Next</string>

    <!-- Dashboard -->
    <string name="name">Target</string>
    <string name="nameTwo">Supermarket</string>
    <string name="location">Mwingi, Kitui</string>
    <string name="tagline">where community comes first, and deals follow close behind</string>

</resources>