<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpDos">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieShop"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/shop_lottie" />

    <TextView
        android:id="@+id/signTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lottieShop"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/sign"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signTitle"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/gilroy_semi"
        android:text="@string/sign2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_semi"
            android:text="@string/hint4" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_semi"
            android:text="@string/hint5" />

    </RadioGroup>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/radioGroup"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="?colorOnBackground" />

    <TextView
        android:id="@+id/dobDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gilroy_semi"
        android:text="@string/hint6"
        android:textSize="15sp" />

    <DatePicker
        android:id="@+id/agePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dobDesc"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true" />

    <Button
        android:id="@+id/button"
        style="@style/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_btn"
        android:elevation="5dp"
        android:fontFamily="@font/gilroy_bold"
        android:onClick="signTwo"
        android:text="@string/btn_one" />

</RelativeLayout>