<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/logo_anim" />

    <TextView
        android:id="@+id/signTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="16sp"
        android:fontFamily="@font/gilroy_bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/lottie_logo"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/signDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login2"
        android:layout_below="@id/signTitle"
        android:fontFamily="@font/gilroy_semi"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPhone"
        style="@style/TextInputLayoutFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/signDesc"
        android:hint="@string/hint9"
        android:layout_marginLeft="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/gilroy_regular"
            android:imeOptions="actionNext"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPassword"
        style="@style/TextInputLayoutFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="21dp"
        android:layout_below="@id/loginPhone"
        android:hint="@string/hint8"
        android:layout_marginLeft="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:fontFamily="@font/gilroy_regular"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPassword"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <Button
            android:id="@+id/forgotButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gas"
            android:text="@string/login3"
            android:textColor="?colorPrimary" />

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_two"
        android:layout_below="@+id/relButton"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/gilroy_bold"
        android:background="@drawable/bg_btn"
        android:elevation="5dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_marginTop="20dp">

    </RelativeLayout>

</RelativeLayout>