<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpTres">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieLogo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:elevation="5dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/logo_anim" />

    <TextView
        android:id="@+id/signTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gilroy_bold"
        android:layout_marginStart="20dp"
        android:layout_below="@id/lottieLogo"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/signDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign2"
        android:layout_below="@id/signTitle"
        android:fontFamily="@font/gilroy_semi"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        style="@style/TextInputLayoutFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_below="@id/signDesc"
        android:hint="@string/hint9"
        android:layout_marginLeft="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:fontFamily="@font/gilroy_regular"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/TextInputLayoutFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/phone"
        android:hint="@string/hint7"
        android:layout_marginLeft="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:fontFamily="@font/gilroy_regular"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonTres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_one"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_btn"
        android:fontFamily="@font/gilroy_bold"
        android:elevation="5dp"
        android:onClick="signThree"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp" />

</RelativeLayout>