<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieBrowse"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/browse_lottie" />

    <TextView
        android:id="@+id/signTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lottieBrowse"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="@string/sign"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/signDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signTitle"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/gilroy_semi"
        android:text="@string/sign2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName"
        style="@style/TextInputLayoutFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:hint="@string/hint1">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/gilroy_regular"
            android:imeOptions="actionNext"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secondName"
        style="@style/TextInputLayoutFilledStyle"
        android:layout_width="485dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/gilroy_regular"
            android:imeOptions="actionNext"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_btn"
        android:elevation="5dp"
        android:fontFamily="@font/gilroy_bold"
        android:onClick="signOne"
        android:text="@string/btn_one" />

</RelativeLayout>